--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,14 @@
-Source: kdevelop
+Source: kdevelop3
 Section: kde
 Priority: optional
 Maintainer: Norman Jordan <njordan@debian.org>
 Build-Depends: debhelper (>> 4.0.0), kdelibs4-dev, gettext, autoconf, automake1.6 | automake1.7, kdelibs4-doc, qt3-doc, flex, libdb4.1-dev | libdb4.0-dev | libdb3-dev, python2.3-dev | python2.2-dev
 Standards-Version: 3.5.6.0
 
-Package: kdevelop
+Package: kdevelop3
 Architecture: any
-Depends: ${shlibs:Depends}, autoconf, automake | automake1.6 | automake1.7, kdebase-bin, kdevelop-data (>> 3.0), kdevelop-plugins
-Recommends: make, kdevelop-doc
+Depends: ${shlibs:Depends}, autoconf, automake | automake1.6 | automake1.7, kdebase-bin, kdevelop3-data (>> 3.0), kdevelop3-plugins
+Recommends: make, kdevelop3-doc
 Suggests: libqt3-mt-dev, qt3-doc, kdbg, kdelibs4-dev, kdelibs4-doc, htdig, sgmltools-lite, gettext, a2ps, enscript, gv, qt3-dev-tools, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz, stl-manual, wxwin2.4-headers, wxwin2.4-i18n, wxwin2.4-examples, libwxbase2.4 | libwxgtk2.4 | libwxgtk2.4-contrib
 Conflicts: gideon
 Description: An IDE for Unix/X11 - development version
@@ -22,7 +22,7 @@ Description: An IDE for Unix/X11 - development version
  .
  URL: http://www.kdevelop.org/
 
-Package: kdevelop-doc
+Package: kdevelop3-doc
 Section: doc
 Architecture: all
 Suggests: qt-doc, python2.3-doc | python2.2-doc, libglib2.0-doc, libgtk2.0-doc | libgtk1.2-doc, gnome-dev-doc, stl-manual
@@ -40,9 +40,9 @@ Description: An IDE for Unix/X11 - documentation
  .
  URL: http://www.kdevelop.org/
 
-Package: kdevelop-data
+Package: kdevelop3-data
 Architecture: all
-Depends: kdevelop (= ${Source-Version})
+Depends: kdevelop3 (= ${Source-Version})
 Conflicts: gideon-data
 Description: An IDE for Unix/X11 - data
  KDevelop is an easy to use Integrated Development Environment
@@ -57,9 +57,9 @@ Description: An IDE for Unix/X11 - data
  .
  URL: http://www.kdevelop.org/
 
-Package: kdevelop-dev
+Package: kdevelop3-dev
 Architecture: all
-Depends: kdevelop (= ${Source-Version})
+Depends: kdevelop3 (= ${Source-Version})
 Recommends: make
 Suggests: libqt3-mt-dev, qt3-doc, kdbg, kdelibs4-dev, kdebase, kdelibs4-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt3-tools, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz
 Conflicts: gideon-dev
@@ -76,7 +76,7 @@ Description: An IDE for Unix/X11 - development files
  .
  URL: http://www.kdevelop.org/
 
-Package: kdevelop-plugins
+Package: kdevelop3-plugins
 Architecture: any
 Depends: ${shlibs:Depends}
 Conflicts: gideon-plugins
