--- a/parts/fileview/Makefile.am
+++ b/parts/fileview/Makefile.am
@@ -10,7 +10,7 @@ libkdevfileview_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 libkdevfilegroups_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfilegroups_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevfileview_la_SOURCES = fileviewpart.cpp filetreewidget.cpp partwidget.cpp
+libkdevfileview_la_SOURCES = fileviewpart.cpp filetreewidget.cpp partwidget.cpp vcscolorsconfigwidgetbase.ui vcscolorsconfigwidget.cpp
                              
 libkdevfilegroups_la_SOURCES = filegroupswidget.cpp addfilegroupdlg.cpp filegroupsconfigwidget.cpp filegroupsconfigwidgetbase.ui filegroupspart.cpp
 
@@ -22,3 +22,4 @@ service_DATA = kdevfileview.desktop kdevfilegroups.desktop
 # not used currently
 #rcdir = $(kde_datadir)/kdevfileview
 #rc_DATA = kdevfileview.rc
+noinst_HEADERS =  vcscolorsconfigwidget.h
