Output the generated Doxyfile to stdout so that I can see what's wrong with ktown's setup.

--- a/Doxyfile.am
+++ b/Doxyfile.am
@@ -113,6 +113,7 @@ apidox-am-yes:
 			$(LN_S) $$common_dir $(top_builddir)/apidocs/common ;\
 		fi ;\
 		$(DOXYGEN) -s -u Doxyfile; \
+		cat Doxyfile; \
 		$(DOXYGEN) Doxyfile; \
 		rm -f Doxyfile; \
 	fi
