CVS_SILENT made messages

--- a/languages/cpp/app_templates/kdevpart2/kdevpart.desktop
+++ b/languages/cpp/app_templates/kdevpart2/kdevpart.desktop
@@ -8,6 +8,7 @@ Name=KDev$APPNAME$
 Name[sv]=KDevelop $APPNAME$
 Name[xx]=xxKDev$APPNAME$xx
 GenericName=$APPNAME$
+GenericName[xx]=xx$APPNAME$xx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Global
