--- a/doc/extras/Makefile.am
+++ b/doc/extras/Makefile.am
@@ -3,6 +3,6 @@ SUBDIRS=w3c
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
 toc_DATA = sdl.toc opengl.toc
 
-indexdir = ${kde_datadir}/devdoctreeview/indices
-index_DATA = 
+#indexdir = ${kde_datadir}/devdoctreeview/indices
+#index_DATA = 
 
