--- a/doc/std/Makefile.am
+++ b/doc/std/Makefile.am
@@ -1,7 +1,7 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
 toc_DATA = kdev3api.toc
 
-indexdir = ${kde_datadir}/devdoctreeview/indices
-index_DATA = 
+#indexdir = ${kde_datadir}/devdoctreeview/indices
+#index_DATA = 
 
 
