--- a/languages/fortran/doc/Makefile.am
+++ b/languages/fortran/doc/Makefile.am
@@ -1,6 +1,6 @@
-tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA =
+#tocdir = ${kde_datadir}/kdevdoctreeview/tocs
+#toc_DATA =
 
-indexdir = ${kde_datadir}/devdoctreeview/indices
-index_DATA = 
+#indexdir = ${kde_datadir}/devdoctreeview/indices
+#index_DATA = 
 
