--- a/languages/haskell/doc/Makefile.am
+++ b/languages/haskell/doc/Makefile.am
@@ -1,6 +1,6 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA =
+toc_DATA = haskell.toc
 
-indexdir = ${kde_datadir}/devdoctreeview/indices
-index_DATA = 
+#indexdir = ${kde_datadir}/devdoctreeview/indices
+#index_DATA = 
 
