--- a/languages/perl/doc/Makefile.am
+++ b/languages/perl/doc/Makefile.am
@@ -1,6 +1,6 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
 toc_DATA = perl.toc
 
-indexdir = ${kde_datadir}/devdoctreeview/indices
-index_DATA =
+#indexdir = ${kde_datadir}/devdoctreeview/indices
+#index_DATA =
 
