--- a/buildtools/custommakefiles/kdevcustomproject.rc
+++ b/buildtools/custommakefiles/kdevcustomproject.rc
@@ -1,10 +1,11 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevCustomProject" version="1">
+<kpartgui name="KDevCustomProject" version="2">
 <MenuBar>
   <Menu name="build" >
     <Action name="build_build" />
     <Action name="build_compilefile" />
     <Action name="build_target" />
+    <Action name="build_make_environment" />
     <Action name="build_clean" />
     <Separator/>
     <Action name="build_execute" />
