--- a/languages/ruby/kdevrubysupport.rc
+++ b/languages/ruby/kdevrubysupport.rc
@@ -5,7 +5,7 @@
     <Action name="build_execute" />
   </Menu>
 </MenuBar>
-<ToolBar name="mainToolBar">
+<ToolBar name="buildToolBar">
     <Action name="build_execute" group="build_operations" />
 </ToolBar>
 </kpartgui>
