--- a/languages/sql/kdevsqlsupport.rc
+++ b/languages/sql/kdevsqlsupport.rc
@@ -1,11 +1,11 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevSQLSupport" version="1">
+<kpartgui name="KDevSQLSupport" version="2">
 <MenuBar>
   <Menu name="build" >
     <Action name="build_execute" />
   </Menu>
 </MenuBar>
-<ToolBar name="mainToolBar">
+<ToolBar name="buildToolBar">
     <Action name="build_execute" group="build_operations" />
 </ToolBar>
 <ToolBar name="browserToolBar">
