--- a/languages/cpp/app_templates/kpartapp/app.desktop
+++ b/languages/cpp/app_templates/kpartapp/app.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=$APPNAME$Part
+Name[et]=$APPNAME$ komponent
 Name[sv]=$APPNAME$-del
 Name[xx]=xx$APPNAME$Partxx
 MimeType=text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text/x-c;text/x-c++;
