--- a/kdevelop.desktop
+++ b/kdevelop.desktop
@@ -4,14 +4,14 @@ BinaryPattern=kdevelop;
 Type=Application
 Exec=kdevelop %u
 MimeType=application/x-kdevelop;
-Icon=kdevelop
+Icon=kdevelop3
 DocPath=kdevelop/index.html
 Terminal=0
 Name=KDevelop
-Name[xx]=xxKDevelop 3.0xx
 Comment=IDE for C++/Qt/KDE
 Comment[ca]=IDE per a C++/Qt/KDE
 Comment[es]=IDE para C++/Qt/KDE
+Comment[et]=C++/Qt/KDE IDE
 Comment[hu]=C++/Qt/KDE fejlesztőkörnyezet
 Comment[it]=IDE per C++/Qt/KDE
 Comment[pt_BR]=IDE para C++/Qt/KDE
