--- a/languages/perl/Makefile.am
+++ b/languages/perl/Makefile.am
@@ -8,7 +8,7 @@ kde_module_LTLIBRARIES = libkdevperlsupport.la kio_perldoc.la
 libkdevperlsupport_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevperlsupport_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevperlsupport_la_SOURCES = perlsupportpart.cpp perlconfigwidget.cpp perlconfigwidgetbase.ui
+libkdevperlsupport_la_SOURCES = perlparser.cpp perlsupportpart.cpp perlconfigwidget.cpp perlconfigwidgetbase.ui
 
 kio_perldoc_la_SOURCES = perldoc.cpp
 kio_perldoc_la_LIBADD = $(LIB_KIO)
