--- a/mimetypes/Makefile.am
+++ b/mimetypes/Makefile.am
@@ -1,7 +1,7 @@
 application_DATA = chm.desktop
 applicationdir = $(kde_mimedir)/application
 
-text_DATA = x-fortran.desktop  x-pascal.desktop
+text_DATA = x-fortran.desktop 
 textdir = $(kde_mimedir)/text
 
 EXTRA_DIST = $(application_DATA) $(text_DATA)
