my recent modifications to abbrev part allows to enable pascal abbreviation templates also added more available file extensions for abbreviations of c++ and pascal

--- a/languages/pascal/Makefile.am
+++ b/languages/pascal/Makefile.am
@@ -27,5 +27,5 @@ genparser:
 #PascalStoreWalker.hpp PascalStoreWalker.cpp: pascal.tree.g
 #	antlr pascal.tree.g
 
-#templatedir = ${kde_datadir}/kdevabbrev/templates
-#template_DATA = pascaltemplates
+templatedir = ${kde_datadir}/kdevabbrev/templates
+template_DATA = pascaltemplates
