backported KDE-3.2's KTabWidget now there are close buttons for the tabs. You can easily add context menus and stuff too (like in konqueror)

--- a/lib/qextmdi/Makefile.am
+++ b/lib/qextmdi/Makefile.am
@@ -9,7 +9,8 @@ libkdevelopqextmdi_la_LIBADD = $(LIB_KPARTS)
 libkdevelopqextmdi_la_SOURCES = kmdichildarea.cpp kmdichildfrm.cpp kmdichildfrmcaption.cpp \
 				kmdichildview.cpp kmdimainfrm.cpp kmditaskbar.cpp kmdidockcontainer.cpp \
 				kdockwidget_compat.cpp dockmainwindow_compat.cpp kmultitabbar.cpp \
-				kmditoolviewaccessor.cpp kmdidocumentviewtabwidget.cpp kmdifocuslist.cpp
+				kmditoolviewaccessor.cpp kmdidocumentviewtabwidget.cpp kmdifocuslist.cpp \
+				ktabwidget.cpp ktabbar.cpp
 
 KDE_OPTIONS = nofinal
 METASOURCES = AUTO
