Move hi*-app-kdevelop3.png to hi*-app-kdevelop.png This makes the new krystal icons work. This fixes the missing icon problem.

--- a/kdevelop.desktop
+++ b/kdevelop.desktop
@@ -4,12 +4,13 @@ BinaryPattern=kdevelop;
 Type=Application
 Exec=kdevelop %u
 MimeType=application/x-kdevelop;
-Icon=kdevelop3
+Icon=kdevelop
 DocPath=kdevelop/index.html
 Terminal=0
 Name=KDevelop
 Comment=IDE for C++/Qt/KDE
 Comment[ca]=IDE per a C++/Qt/KDE
+Comment[de]=IDE für C++/Qt/KDE
 Comment[es]=IDE para C++/Qt/KDE
 Comment[et]=C++/Qt/KDE IDE
 Comment[hu]=C++/Qt/KDE fejlesztőkörnyezet
