Fix bug #68237. Thanks to Huberto Gastal Mayer.

--- a/languages/cpp/app_templates/kofficepart/src-Makefile.am
+++ b/languages/cpp/app_templates/kofficepart/src-Makefile.am
@@ -3,7 +3,7 @@ INCLUDES  = $(KOFFICE_INCLUDES) -I$(interfacedir) $(all_includes)
 
 ## The part
 kde_module_LTLIBRARIES = lib$APPNAMELC$part.la
-lib$APPNAME$part_la_SOURCES = $APPNAMELC$_part.cpp \
+lib$APPNAMELC$part_la_SOURCES = $APPNAMELC$_part.cpp \
 	$APPNAMELC$_view.cpp $APPNAMELC$_factory.cpp
 lib$APPNAMELC$part_la_LDFLAGS = $(KDE_PLUGIN)
 lib$APPNAMELC$part_la_LIBADD = -lkofficeui
