--- a/vcs/cvsservice/Makefile.am
+++ b/vcs/cvsservice/Makefile.am
@@ -18,13 +18,13 @@ libkdevcvsservice_la_SOURCES = cvspart.cpp cvspartimpl.cpp \
     releaseinputdialogbase.ui releaseinputdialog.cpp \
     cvslogdialog.cpp cvslogpage.cpp cvsdiffpage.cpp diffwidget.cpp \
     jobscheduler.cpp \
-    cvsfileinfoprovider.cpp cvsservicedcopiface.skel
+    cvsfileinfoprovider.cpp cvsservicedcopIface.skel
 
 noinst_HEADERS = changelog.h checkoutdialog.h checkoutdialogbase.h commitdlg.h \
     cvsentry.h cvsform.h cvsformbase.h cvsoptions.h cvsoptionswidget.h cvsoptionswidgetbase.h \
     cvspart.h cvspartimpl.h cvsprocesswidget.h tagdialog.h tagdialogbase.h diffdialog.h \
     cvsdir.h cvslogpage.h cvslogdialog.h jobscheduler.h diffwidget.h cvsfileinfoprovider.h \
-    cvsservicedcopiface.h
+    cvsservicedcopIface.h
     
 METASOURCES = AUTO
 
