--- a/parts/filter/Makefile.am
+++ b/parts/filter/Makefile.am
@@ -6,7 +6,7 @@ kde_module_LTLIBRARIES = libkdevfilter.la
 libkdevfilter_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfilter_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevfilter_la_SOURCES = filterpart.cpp shellfilterdlg.cpp shellinsertdlg.cpp kdevfilteriface.cpp kdevfilteriface.skel
+libkdevfilter_la_SOURCES = filterpart.cpp shellfilterdlg.cpp shellinsertdlg.cpp kdevfilterIface.cpp kdevfilterIface.skel
 
 METASOURCES = AUTO
 
