Fix the problem of the missing links to kdelibs in the KDevelop API documentation generated by ktown. Many thanks to dfaure for the two minutes that it took him to provide me with the info to fix this. I'd been asking for this info since 2003/10/06 with no success at sysadmin@kde.org :) CCMAIL: sysadmin@kde.org CCMAIL: dfaure@kde.org CCMAIL: coolo@kde.org CCMAIL: mueller@kde.org

--- a/Doxyfile.am
+++ b/Doxyfile.am
@@ -96,6 +96,8 @@ apidox-am-yes:
 					tagpath=`ls -1 $(kde_htmldir)/en/*-apidocs/$$tag/$$tag.tag 2> /dev/null` ;\
 					if test -n "$$tagpath"; then \
 						path=`echo $$tagpath | sed -e "s,.*/\([^/]*-apidocs\)/$$tag/$$tag.tag,../../\1/$$tag,"` ;\
+					else \
+						tagpath=/home/apidox/public/cvs-api/$$tag/$$tag.tag ;\
 					fi ;\
 				fi ;\
 				if test "$$tag" = qt; then \
