1.) latest sync with KMdi of kdelibs-cvsHead (fixes some crashes) 2.) enabled kmdiguiclient.h/cpp for KDE less version 3.2 too -> this introduces KDE-accels Ctrl+Shift+Alt+L/R/B/T for IDEAl-docks and Ctrl+Alt+CursorLeft/CursorRight for cycling IDEAl-toolviews 3.) bugfix: proper names of View menu 4.) now save the docking state to another section of kdeveloprc (to let people (who tried KMdi alpha versions) escape a vicious cycle)

--- a/lib/qextmdi/Makefile.am
+++ b/lib/qextmdi/Makefile.am
@@ -10,6 +10,7 @@ libkdevelopqextmdi_la_SOURCES = kmdichildarea.cpp kmdichildfrm.cpp kmdichildfrmc
 				kmdichildview.cpp kmdimainfrm.cpp kmditaskbar.cpp kmdidockcontainer.cpp \
 				kdockwidget_compat.cpp dockmainwindow_compat.cpp kmultitabbar.cpp \
 				kmditoolviewaccessor.cpp kmdidocumentviewtabwidget.cpp kmdifocuslist.cpp \
+				kmdiguiclient.cpp \
 				ktabwidget.cpp ktabbar.cpp
 
 KDE_OPTIONS = nofinal
