CVS_SILENT made messages

--- a/languages/cpp/app_templates/kbearplugin/kbearplugin.desktop
+++ b/languages/cpp/app_templates/kbearplugin/kbearplugin.desktop
@@ -5,5 +5,7 @@ Icon=kbear
 ServiceTypes=KBear/Plugin
 X-KDE-Library=libkbear$APPNAMELC$
 Name=KBear$APPNAME$
+Name[sv]=KBear $APPNAME$
+Name[xx]=xxKBear$APPNAME$xx
 Comment=$APPNAME$
 Comment[xx]=xx$APPNAME$xx
