+GenericName, deleted outdated comment

--- a/kdevelop.desktop
+++ b/kdevelop.desktop
@@ -8,17 +8,8 @@ Icon=kdevelop
 DocPath=kdevelop/index.html
 Terminal=0
 Name=KDevelop
-Comment=IDE for C++/Qt/KDE
-Comment[ca]=IDE per a C++/Qt/KDE
-Comment[de]=IDE für C++/Qt/KDE
-Comment[es]=IDE para C++/Qt/KDE
-Comment[et]=C++/Qt/KDE IDE
-Comment[hu]=C++/Qt/KDE fejlesztőkörnyezet
-Comment[it]=IDE per C++/Qt/KDE
-Comment[pt_BR]=IDE para C++/Qt/KDE
-Comment[sr]=IDE за C++/Qt/KDE
-Comment[sv]=Integrerad utvecklingsmiljö för C++/Qt/KDE
-Comment[tr]=C++/Qt/KDE için IDE
-Comment[xx]=xxIDE for C++/Qt/KDExx
+Name[xx]=xxKDevelopxx
+GenericName=Integrated Development Environment
 X-DCOP-ServiceType=Multi
 Categories=Qt;KDE;Development
+
