CVS_SILENT made messages

--- a/vcs/subversion/kdevpart_subversion.desktop
+++ b/vcs/subversion/kdevpart_subversion.desktop
@@ -3,12 +3,22 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Subversion
-Comment[xx]=xxsubversionxx
+Comment[es]=Subversión
+Comment[pt_BR]=Subversão
+Comment[ru]=Интеграция Subversion
+Comment[sv]=Delversion
+Comment[xx]=xxSubversionxx
 Name=KDevsubversion
-Name[sv]=KDevelop subversion
-Name[xx]=xxSubversionxx
-Name[fr]=Subversion
+Name[de]=Subversion-Unterstützung (KDevelop)
+Name[sv]=KDevelop delversion
+Name[xx]=xxKDevsubversionxx
 GenericName=Subversion
+GenericName[de]=Subversion-Unterstützung
+GenericName[es]=Subversión
+GenericName[pt_BR]=Subversão
+GenericName[ru]=Интеграция Subversion
+GenericName[sv]=Delversion
+GenericName[xx]=xxSubversionxx
 Icon=misc
 ServiceTypes=KDevelop/VersionControl
 X-KDevelop-Scope=Global
