--- a/languages/cpp/app_templates/kateplugin2/plugin.desktop
+++ b/languages/cpp/app_templates/kateplugin2/plugin.desktop
@@ -2,23 +2,39 @@
 Type=Service
 ServiceTypes=Kate/Plugin
 X-KDE-Library=lib$APPNAMELC$plugin
+X-Kate-Version=2.2
 Name=My first Kate Plugin
+Name[ca]=El meu primer connector per a Kate
 Name[da]=Min første Kate plugin
+Name[de]=Erstes Kate-Plugin
+Name[el]=Το πρώτο μου πρόσθετο για το Kate
 Name[es]=Mi primer plugin de Kate
+Name[et]=Minu esimene Kate plugin
+Name[fr]=Mon premier module externe pour Kate.
 Name[hu]=Mintapélda Kate-bővítőmodulra
 Name[it]=Il mio primo plugin di Kate
+Name[nl]=Mijn eerste Kate-plugin
 Name[pt]=O meu primeiro 'plugin' para o Kate
 Name[pt_BR]=Meu primeiro Plugin do Kate
-Name[sr]=Мој први кate прикључак
+Name[ru]=Мой первый модуль к Kate
+Name[sr]=Мој први додатак за Kate
 Name[sv]=Mitt första insticksprogram för Kate
 Name[xx]=xxMy first Kate Pluginxx
 Comment=Your short description about the plugin goes here
+Comment[ca]=Aquí va la vostra descripció curta referent al connector
 Comment[da]=Din korte beskrivelse af plugin skal være her
+Comment[de]=Hierhin gehört eine kurze Beschreibung des Plugins
+Comment[el]=Η σύντομη περιγραφή του προσθέτου σας πηγαίνει εδώ
 Comment[es]=Aquí va la descripción corta sobre los plugins
+Comment[et]=Sinu plugina lühikirjeldus
+Comment[fr]=La description courte de votre module
 Comment[hu]=Itt lehet egy rövid leírást adni a bővítőmodulról
+Comment[it]=La tua breve descrizione sui plugin va qui
+Comment[nl]=Hier kunt u een korte omschrijving opgeven
 Comment[pt]=A sua descrição do 'plugin' aqui
 Comment[pt_BR]=Sua descrição sumária sobre o plugin vai aqui
-Comment[sr]=Овде иде Ваш кратак опис прикључка
+Comment[ru]=Здесь располагается краткое описание модуля
+Comment[sr]=Овде иде ваш кратак опис додатка
 Comment[sv]=En kort beskrivningen av vad insticksprogrammet gör
 Comment[xx]=xxYour short description about the plugin goes herexx
 author=$AUTHOR$, $EMAIL$
