--- a/languages/cpp/app_templates/kcmodule/module.desktop
+++ b/languages/cpp/app_templates/kcmodule/module.desktop
@@ -1,28 +1,42 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=$APPNAME$ - a kcontrol module
+Comment[ca]=$APPNAME$ - un mòdul de kcontrol
 Comment[da]=$APPNAME$ - et kcontrol-modul
+Comment[de]=$APPNAME$ - ein KControl-Modul
 Comment[es]=$APPNAME$ - un módulo de kcontrol
+Comment[et]=$APPNAME$ - KDE juhtimiskeskuse moodul
+Comment[fr]=$APPNAME$ - un module externe du centre de configuration de KDE.
 Comment[hu]=$APPNAME$ - bővítőmodul a Vezérlőközponthoz
+Comment[it]=$APPNAME$ - un modulo per kcontrol
+Comment[nl]=$APPNAME$ - een kcontrol-module
 Comment[pt]=$APPNAME$ - um módulo do kcontrol
 Comment[pt_BR]=$APPNAME$ - um módulo do kcontrol
-Comment[sr]=$APPNAME$ - kcontrol модул
+Comment[ru]=$APPNAME$ - модуль kcontrol
+Comment[sr]=$APPNAME$ — kcontrol модул
 Comment[sv]=$APPNAME$ - en modul i Inställningscentralen
 Comment[xx]=xx$APPNAME$ - a kcontrol modulexx
 Exec=kcmshell $APPNAMELC$
 Keywords=$APPNAME$,$APPNAMELC$
 Keywords[xx]=xx$APPNAME$,$APPNAMELC$xx
 Name=The $APPNAME$ applet
+Name[ca]=L'applet $APPNAME$
 Name[da]=$APPNAME$-applet
+Name[de]=Miniprogramm $APPNAME$
 Name[es]=El applet $APPNAME$
+Name[et]=$APPNAME$ aplett
+Name[fr]=L'applet $APPNAME$
 Name[hu]=$APPNAME$ kisalkalmazás
+Name[it]=Applet di $APPNAME$
+Name[nl]=De $APPNAME$ applet
 Name[pt]='Applet' $APPNAME$
 Name[pt_BR]=O applet $APPNAME$
+Name[ru]=Аплет $APPNAME$
 Name[sr]=$APPNAME$ аплет
 Name[sv]=Miniprogram $APPNAME$
 Name[xx]=xxThe $APPNAME$ appletxx
 Terminal=false
 Type=Application
-X-KDE-FactoryName=$APPNAMELC$
+X-KDE-FactoryName=$APPNAME$
 X-KDE-Library=$APPNAMELC$
 X-KDE-ModuleType=Library
