Partly fix "Cannot translate project due to srcdir != builddir" 71003 http://bugs.kde.org/show_bug.cgi?id=71003
Please read kdevelop/languages/cpp/app_templates/kapp/README and test it.

CCMAIL: 71003@bugs.kde.org

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,7 @@ $(top_srcdir)/acinclude.m4: $(top_srcdir)/kdevelop.m4.in
 MAINTAINERCLEANFILES = subdirs configure.in acinclude.m4 configure.files
 
 package-messages:
-	$(MAKE) -f admin/Makefile.common package-messages
+	$(MAKE) -f $(top_srcdir)/admin/Makefile.common package-messages
 	$(MAKE) -C po merge
 
 dist-hook:
