Easy access to bug reports of every supported language in the documentation browser (except SQL) Fixes: http://bugs.kde.org/show_bug.cgi?id=69129 Thanks to Jaime Torres for posting the links. Bash, Haskell and Python do not work correctly due to: http://bugs.kde.org/show_bug.cgi?id=72271 CCMAIL: 69129-done@bugs.kde.org

--- a/languages/ada/doc/Makefile.am
+++ b/languages/ada/doc/Makefile.am
@@ -1,5 +1,5 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = ada.toc
+toc_DATA = ada.toc ada_bugs_gcc.toc
 
 #indexdir = ${kde_datadir}/devdoctreeview/indices
 #index_DATA = 
