--- a/languages/haskell/doc/Makefile.am
+++ b/languages/haskell/doc/Makefile.am
@@ -1,5 +1,5 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = haskell.toc
+toc_DATA = haskell.toc haskell_bugs_ghc.toc
 
 #indexdir = ${kde_datadir}/devdoctreeview/indices
 #index_DATA = 
