--- a/languages/java/doc/Makefile.am
+++ b/languages/java/doc/Makefile.am
@@ -1,5 +1,5 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = sw.toc
+toc_DATA = sw.toc java_bugs_gcc.toc java_bugs_sun.toc
 
 #indexdir = ${kde_datadir}/devdoctreeview/indices
 #index_DATA = 
