--- a/languages/ruby/doc/Makefile.am
+++ b/languages/ruby/doc/Makefile.am
@@ -1,5 +1,5 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = ruby.toc
+toc_DATA = ruby.toc ruby_bugs.toc
 
 indexdir = ${kde_datadir}/devdoctreeview/indices
 index_DATA = ruby.index
