--- a/languages/bash/doc/Makefile.am
+++ b/languages/bash/doc/Makefile.am
@@ -1,5 +1,5 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = bash.toc
+toc_DATA = bash.toc bash_bugs.toc
 
 #indexdir = ${kde_datadir}/devdoctreeview/indices
 #index_DATA = 
