--- a/languages/fortran/doc/Makefile.am
+++ b/languages/fortran/doc/Makefile.am
@@ -1,5 +1,5 @@
-#tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-#toc_DATA =
+tocdir = ${kde_datadir}/kdevdoctreeview/tocs
+toc_DATA = fortran_bugs_gcc.toc
 
 #indexdir = ${kde_datadir}/devdoctreeview/indices
 #index_DATA = 
