--- a/languages/pascal/doc/Makefile.am
+++ b/languages/pascal/doc/Makefile.am
@@ -1,5 +1,5 @@
-#tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-#toc_DATA =
+tocdir = ${kde_datadir}/kdevdoctreeview/tocs
+toc_DATA = pascal_bugs_fp.toc
 
 #indexdir = ${kde_datadir}/devdoctreeview/indices
 #index_DATA = 
