--- a/languages/php/doc/Makefile.am
+++ b/languages/php/doc/Makefile.am
@@ -1,5 +1,5 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = php.toc
+toc_DATA = php.toc php_bugs.toc
 
 indexdir = ${kde_datadir}/devdoctreeview/indices
 index_DATA = php.index
