--- a/languages/python/doc/Makefile.am
+++ b/languages/python/doc/Makefile.am
@@ -1,5 +1,5 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = python.toc
+toc_DATA = python.toc python_bugs.toc
 
 indexdir = ${kde_datadir}/devdoctreeview/indices
 index_DATA = python.index
